resolve #8827 Dropdown item labels are misaligned in RTL

--- a/packages/survey-core/src/default-styles.scss
+++ b/packages/survey-core/src/default-styles.scss
@@ -1408,7 +1408,7 @@ sv-popup {
   padding-inline-start: calc(2 * var(--base-unit, 8px));
   cursor: pointer;
   overflow: hidden;
-  text-align: left;
+  text-align: start;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: flex;
