--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-item.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-item.scss
@@ -60,7 +60,7 @@
   color: $font-questiontitle-color;
   white-space: normal;
   width: 100%;
-  text-align: left;
+  text-align: start;
   min-width: 0;
 
   .sv-string-viewer {
